{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 58,
  "lineage": "c6a17c99-d18d-dab4-948e-6da8e7cce90f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e6f07b499ae53ed",
            "arn": "arn:aws:ec2:us-east-1:474668414348:elastic-ip/eipalloc-05e6f07b499ae53ed",
            "domain": "vpc",
            "id": "eipalloc-05e6f07b499ae53ed",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-168-179.compute-1.amazonaws.com",
            "public_ip": "18.210.168.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "APCI-jupiter-dev-elestic-ip",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-elestic-ip",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024bd8e8aa1f265de",
            "arn": "arn:aws:ec2:us-east-1:474668414348:elastic-ip/eipalloc-024bd8e8aa1f265de",
            "domain": "vpc",
            "id": "eipalloc-024bd8e8aa1f265de",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-206-137-151.compute-1.amazonaws.com",
            "public_ip": "34.206.137.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "APCI-jupiter-dev-elestic-ip-az1b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-elestic-ip-az1b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "apci_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:internet-gateway/igw-0c03a44203ad5e4da",
            "id": "igw-0c03a44203ad5e4da",
            "owner_id": "474668414348",
            "tags": {
              "Name": "APCI-jupiter-dev-igw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-igw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e6f07b499ae53ed",
            "association_id": "eipassoc-05b98b02d8f98ad94",
            "connectivity_type": "public",
            "id": "nat-05f2100a20a1e35e6",
            "network_interface_id": "eni-0424e8ba44a820104",
            "private_ip": "10.0.0.25",
            "public_ip": "18.210.168.179",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a21d21df37d8bfa1",
            "tags": {
              "Name": "APCI-jupiter-dev-nat-gw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-nat-gw",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024bd8e8aa1f265de",
            "association_id": "eipassoc-0a34df317263b23b6",
            "connectivity_type": "public",
            "id": "nat-027dc2e00a6437eb8",
            "network_interface_id": "eni-0ec56509352ea92a2",
            "private_ip": "10.0.0.45",
            "public_ip": "34.206.137.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a21d21df37d8bfa1",
            "tags": {
              "Name": "APCI-jupiter-dev-nat-gw_az1b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-nat-gw_az1b",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_az1b",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_private_rt_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:route-table/rtb-00997348efa98654b",
            "id": "rtb-00997348efa98654b",
            "owner_id": "474668414348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-027dc2e00a6437eb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_az1b",
            "module.vpc.aws_nat_gateway.nat_gw_az1b",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:route-table/rtb-04705135f5c1ac69b",
            "id": "rtb-04705135f5c1ac69b",
            "owner_id": "474668414348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c03a44203ad5e4da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-jupiter-dev-public-rt",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-public-rt",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.apci_igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c0cfea48e950017",
            "route_table_id": "rtb-04705135f5c1ac69b",
            "subnet_id": "subnet-0a196b16c6c6c693b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.apci_igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.db_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b85326f2ab06c16",
            "route_table_id": "rtb-00997348efa98654b",
            "subnet_id": "subnet-0d6b14ca138a09fa5"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_az1b",
            "module.vpc.aws_nat_gateway.nat_gw_az1b",
            "module.vpc.aws_route_table.apci_private_rt_az1b",
            "module.vpc.aws_subnet.db_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_associatin_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf863b5fc34bd2e",
            "route_table_id": "rtb-04705135f5c1ac69b",
            "subnet_id": "subnet-009259212b3f4cd75"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.apci_igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_associatin_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf8ad59e5af238ab",
            "route_table_id": "rtb-00997348efa98654b",
            "subnet_id": "subnet-0f9c9d1f832dfee5a"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_az1b",
            "module.vpc.aws_nat_gateway.nat_gw_az1b",
            "module.vpc.aws_route_table.apci_private_rt_az1b",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_associatin_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0144c5d65b59d698e",
            "route_table_id": "rtb-04705135f5c1ac69b",
            "subnet_id": "subnet-0a21d21df37d8bfa1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.apci_igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057a8f00dc4daec3b",
            "route_table_id": "rtb-04705135f5c1ac69b",
            "subnet_id": "subnet-0674cc663cef848a9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.apci_igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:subnet/subnet-0a196b16c6c6c693b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a196b16c6c6c693b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668414348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-private_subnet_3",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-private_subnet_3",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:subnet/subnet-0d6b14ca138a09fa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6b14ca138a09fa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668414348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-private_subnet_4",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-private_subnet_4",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:subnet/subnet-009259212b3f4cd75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009259212b3f4cd75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668414348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-private_subnet_1",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-private_subnet_1",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:subnet/subnet-0f9c9d1f832dfee5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9c9d1f832dfee5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668414348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-private_subnet_2",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-private_subnet_2",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:subnet/subnet-0a21d21df37d8bfa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a21d21df37d8bfa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668414348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-public_subnet_1",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-public_subnet_1",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:subnet/subnet-0674cc663cef848a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0674cc663cef848a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668414348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-jupiter-dev-public_subnet_2",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-public_subnet_2",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0d94fec4504ca38a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668414348:vpc/vpc-0d94fec4504ca38a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f79138d29db2dc61",
            "default_route_table_id": "rtb-039faee5e88e61338",
            "default_security_group_id": "sg-0a20eb7201d7f3d53",
            "dhcp_options_id": "dopt-02feb9397cd5c51c5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d94fec4504ca38a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039faee5e88e61338",
            "owner_id": "474668414348",
            "tags": {
              "Name": "APCI-jupiter-dev-main-vpc",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-jupiter-dev-main-vpc",
              "application": "jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-14T06:22:40Z",
              "environment": "dev",
              "project": "APCI"
            }
          }
        }
      ]
    }
  ]
}